--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@remixicon/react": "^4.2.0",
     "next": "14.2.4",
     "react": "^18",
